--- a/FinalProject_CRUD/css/style.css
+++ b/FinalProject_CRUD/css/style.css
@@ -178,7 +178,6 @@ signup
 }
 
 input:focus{
-    outline: 0 0 0 0 !important;
     box-shadow: 0 0 0 0 !important;
 
 }
@@ -219,4 +218,24 @@ user world
 */
 .world-user-info {
     height: fit-content;
+}
+
+/*
+all user section
+*/
+
+.all_user_section {
+    background: cadetblue;
+    padding: 10vh;
+}
+
+/*
+personal page section
+*/
+.personal_page_section {
+    background:
+            linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%),
+            linear-gradient(127deg, rgba(0,255,0,.8), rgba(0,255,0,0) 70.71%),
+            linear-gradient(336deg, rgba(0,0,255,.8), rgba(0,0,255,0) 70.71%);
+    padding: 10vh;
 }
